--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -60,7 +60,7 @@
                         Deine Stadt auswählen
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ url_for('locations.kronau') }}">Kronau</a></li>
+                        <!-- <li><a class="dropdown-item" href="{{ url_for('locations.kronau') }}">kronau</a></li> -->
                         <li><a class="dropdown-item" href="{{ url_for('locations.oestringen') }}">Östringen</a></li>
                         <li><a class="dropdown-item"
                                 href="{{ url_for('locations.oberhausen') }}">Oberhausen-Rheinhausen</a></li>
