--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -25,7 +25,7 @@
         <div class="content-split">
             <div class="text">
                 <img class="deco-car" src="/static/assets/img/deco-car.png" alt="Dekoratives Auto">
-                <h1>KFZ Annahmestellen</h1>
+                <h1 data-i18n="locations.overview.hero.title">KFZ Annahmestellen</h1>
                 <p data-i18n="locations.overview.hero.description">Suche hier deinen Standort aus, sodass du ganz bequem
                     Dein Anliegen in deiner Nähe erledigen kannst.</p>
                 <h4 data-i18n="locations.overview.hero.how">Wie läuft das ab?</h4>
