announcement bar updated

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -139,7 +139,7 @@
     <div class="ticker">
         <div class="ticker-content">
             {% for i in range(4) %}
-            <span class="ticker-item"><i class="fas fa-bullhorn me-2"></i> <strong data-i18n="ticker-strong">Neu!</strong> <span data-i18n="ticker-content">EXPRESS Auto Anmeldung in 10 Minuten Bundesweit auch an Sonntag - und Feiertagen</span></span>
+            <span class="ticker-item"><i class="fas fa-bullhorn me-2"></i> <strong data-i18n="ticker-strong">Neu!</strong> <span data-i18n="ticker-content">EXPRESS Auto Anmeldung in 10 Minuten Bundesweit auch an Sonn - und Feiertagen</span></span>
             {% endfor %}
         </div>
     </div>
