--- a/app/templates/kronau.html
+++ b/app/templates/kronau.html
@@ -9,7 +9,12 @@
         <h1 data-i18n="locations.kronau.hero.title">Express KFZ-Zulassung in Kronau</h1>
         <div class="content-split">
             <div class="map-wrapper">
-                <div id="map"></div>
+                <div id="map">
+                    <iframe src="https://www.google.com/maps?q=49.2191633854922,8.631536582885767&z=15&output=embed"
+                        width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
             </div>
             <div class="text-wrapper">
                 <div>
@@ -102,33 +107,5 @@
 {% include 'checklist-section.html' %}
 
 {% include 'reviews-section.html' %}
-
-<script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
-<script>
-    var MarkerAnnotation = mapkit.MarkerAnnotation,
-        clickAnnotation;
-    var work = new mapkit.Coordinate(49.2191633854922, 8.631536582885767);
-
-    mapkit.init({
-        authorizationCallback: function (done) {
-            // Directly pass the token you have
-            const token = "eyJraWQiOiJLNlVVOVBaOEY2IiwidHlwIjoiSldUIiwiYWxnIjoiRVMyNTYifQ.eyJpc3MiOiI3TkdMS0hQQjdZIiwiaWF0IjoxNzI4MTQzODE1LCJvcmlnaW4iOiIqLmtmenp1bGFzc3VuZ3NleHByZXNzLmRlIn0.ty4lP_zG5Hz-1t45Xhp4IQOzs54OE2DqCeXLWxoEZSXiSeSZzNixszk7DJdTKh1vNRZsPl1z5fMugNJtsh2WNQ";
-            done(token);
-        }
-    });
-    var map = new mapkit.Map("map");
-    //map.colorScheme = mapkit.Map.ColorSchemes.Dark;
-
-    // Setting properties after creation:
-    var workAnnotation = new MarkerAnnotation(work);
-    workAnnotation.color = "#003657";
-    workAnnotation.title = "Express Zulassung";
-    workAnnotation.subtitle = "Kronau";
-    workAnnotation.selected = "true";
-    workAnnotation.glyphText = "🚘";
-
-    // Add and show both annotations on the map
-    map.showItems([workAnnotation]);
-</script>
 
 {% endblock %}
