--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -77,7 +77,11 @@
     <h2 data-i18n="locations.overview.central.title">Unsere Zentrale</h2>
     <div class="content-split">
         <div class="map-wrapper">
-            <div id="centralMap"></div>
+            <div id="centralMap">
+                <iframe src="https://www.google.com/maps?q=49.12283268928136,8.586423491625453&z=15&output=embed" width="100%"
+                    height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
         </div>
         <div class="text-wrapper">
             <div>
@@ -106,31 +110,4 @@
 
 {% include 'contact-section.html' %}
 
-<script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
-<script>
-    var MarkerAnnotation = mapkit.MarkerAnnotation,
-        clickAnnotation;
-    var work = new mapkit.Coordinate(49.12283268928136, 8.586423491625453);
-
-    mapkit.init({
-        authorizationCallback: function (done) {
-            // Directly pass the token you have
-            const token = "eyJraWQiOiJLNlVVOVBaOEY2IiwidHlwIjoiSldUIiwiYWxnIjoiRVMyNTYifQ.eyJpc3MiOiI3TkdMS0hQQjdZIiwiaWF0IjoxNzI4MTQzODE1LCJvcmlnaW4iOiIqLmtmenp1bGFzc3VuZ3NleHByZXNzLmRlIn0.ty4lP_zG5Hz-1t45Xhp4IQOzs54OE2DqCeXLWxoEZSXiSeSZzNixszk7DJdTKh1vNRZsPl1z5fMugNJtsh2WNQ";
-            done(token);
-        }
-    });
-    var map = new mapkit.Map("centralMap");
-    //map.colorScheme = mapkit.Map.ColorSchemes.Dark;
-
-    // Setting properties after creation:
-    var workAnnotation = new MarkerAnnotation(work);
-    workAnnotation.color = "#003657";
-    workAnnotation.title = "KFZ Zulassungs Express";
-    workAnnotation.subtitle = "Zentrale";
-    workAnnotation.selected = "true";
-    workAnnotation.glyphText = "🚘";
-
-    // Add and show both annotations on the map
-    map.showItems([workAnnotation]);
-</script>
 {% endblock %}
