Updated contact pop-up and meta description

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
   <title>{% block title %}Base Title{% endblock %}</title>
 
   <meta name="description"
-    content="Schnelle KFZ-Express-Zulassung. Auto online anmelden und Fahrzeug unkompliziert zulassen – deutschlandweit und sicher. Ohne Termin" />
+    content="Schnelle KFZ-Express-Zulassung. Fahrzeug unkompliziert zulassen – deutschlandweit und sicher. Ohne Termin" />
   <meta name="keywords"
     content="KFZ Zulassung, Express KFZ Zulassung, Auto anmelden, Fahrzeugzulassung, KFZ online anmelden, KFZ Zulassungsdienst, Zollkennzeichen, Exportkennzeichen, Kurzzeitkennzeichen" />
 
