--- a/app/templates/contact-section.html
+++ b/app/templates/contact-section.html
@@ -16,14 +16,14 @@
             <div class="contact-info">
                 <h2>KFZ-Zulassungs-Express Bruchsal</h2>
                 <p class="address">Am Alten Güterbahnhof 24,<br />76646 Bruchsal</p>
-                <a class="phone-link" href="tel:+4972599256080">+49 7259 925680</a>
+                <a class="phone-link" href="tel:+4972599256080">+49 7251 9295628</a>
                 
                 <div class="btn-container">
                     <div class="btn-row">
                         <a href="mailto:info@kfzzulassungsexpress.de" class="btn btn-primary btn-half">E-mail</a>
                         <a href="https://wa.me/4915778789899" class="btn btn-whatsapp btn-half" target="_blank">WhatsApp</a>
                     </div>
-                    <a href="tel:+497259925680" class="btn btn-primary btn-full">Anrufen</a>
+                    <a href="tel:+4972519295628" class="btn btn-primary btn-full">Anrufen</a>
                 </div>
             </div>
         </div>
